--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "engines": {
     "node": "0.8.x"
   },
-  "subdomain": "by-world-todo",
+  "subdomain": "by-todo",
   "dependencies": {
     "express": "3.3.3",
     "mongodb": "1.3.11",
